--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <button id="submit-answer">Submit Answer</button>
       <p id="feedback"></p>
     </div>
-    <p id="score" style="display: none;">Score: <span id="user-score">0</span></p>
-    <button id="restart-button" style="display: none;">Restart Quiz</button>
+    <p id="score" style="display: none;"> Your Score: <span id="user-score">0</span></p>
+    <button id="restart-button" >Restart Quiz</button>
   </div>
   <script src="script.js"></script>
 </body>
